infrastructure/production/namepsace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ml-saas
  labels:
    name: production
