infrastructure/production/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: dashboard
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: user-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4001
---
apiVersion: v1
kind: Service
metadata:
  name: transcription-service
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: transcription-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4002
